--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.ntech_services" "\0"
-            VALUE "FileDescription", "test_app_write" "\0"
+            VALUE "FileDescription", "parcel_delivery" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "test_app_write" "\0"
+            VALUE "InternalName", "parcel_delivery" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.ntech_services. All rights reserved." "\0"
-            VALUE "OriginalFilename", "test_app_write.exe" "\0"
-            VALUE "ProductName", "test_app_write" "\0"
+            VALUE "OriginalFilename", "parcel_delivery.exe" "\0"
+            VALUE "ProductName", "parcel_delivery" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
