--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,16 @@ dependencies:
   flutter_font_icons: ^2.2.4
   flutter_typeahead: ^3.2.4
   flutter_native_splash: ^2.1.6
+  json_serializable: ^6.1.6
+  intl: ^0.17.0
+  qr_code_scanner: ^1.0.0-alpha.1
+  firebase_core: ^1.14.1
+  firebase_messaging: ^11.2.13
+  osm_nominatim: ^2.0.1
+  timelines: ^0.1.0
+  qr_flutter: ^4.0.0
+  screenshot: ^1.2.3
+  esys_flutter_share_plus: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +35,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   bloc_test: ^9.0.3
   flutter_launcher_icons: "^0.9.2"
+  build_runner: ^2.1.10
 
 flutter_icons:
   android: "launcher_icon"
